Fixed Chat dock from overlapping page view Fixed Showing of Flash Window on Password reset Fixed missing entries in the config.json due to missing in install.js

--- a/src/sass/partials/chat.sass
+++ b/src/sass/partials/chat.sass
@@ -2,17 +2,15 @@
   position: fixed
   bottom: 0
   left: 0
-  height: 25px
+  height: 0
   width: 100%
-  border: 1px solid red
-  background: #646464
 
 .chat-dock
   position: fixed
   bottom: 0
   left: 0
   right: 0
-  height: 28px
+  height: 0
   width: 100%
   z-index: 300
 
@@ -22,7 +20,7 @@
     .chat-box-position
       position: relative
       //top: -267px
-      top: -252px
+      top: -280px
       left: 0
 
     .chat-box
